Add comment for Import part

--- a/Book_Recommendation_System.ipynb
+++ b/Book_Recommendation_System.ipynb
@@ -36,16 +36,26 @@
       },
       "outputs": [],
       "source": [
+        "# Import the numpy library for numerical computations\n",
         "import numpy as np\n",
+        "\n",
+        "# Import the pandas library for working with tabular data\n",
         "import pandas as pd\n",
         "\n",
+        "# Import matplotlib for basic plotting functionality\n",
         "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Import seaborn for enhanced data visualization\n",
         "import seaborn as sns\n",
         "\n",
+        "# Import the fastai library for machine learning tools\n",
         "from fastai import *\n",
         "from fastai.collab import *\n",
         "\n",
-        "from operator import itemgetter"
+        "# Import the itemgetter function from the operator module\n",
+        "from operator import itemgetter\n",
+        "\n",
+        "# Now you can write your Python code with these libraries"
       ]
     },
     {
@@ -65,6 +75,9 @@
       },
       "outputs": [],
       "source": [
+        "# Set the maximum column width for DataFrame display to None\n",
+        "# This ensures that when displaying DataFrames, no text content in columns is truncated or wrapped,\n",
+        "# allowing you to see the full content of each cell without horizontal scrolling.\n",
         "pd.set_option('display.max_colwidth', None)"
       ]
     },
@@ -419,8 +432,17 @@
         }
       ],
       "source": [
+        "# Read data from a CSV file containing book ratings using pandas\n",
+        "# The file is located at '/content/drive/MyDrive/Data/BX-Book-Ratings.csv'\n",
+        "\n",
+        "# The data in the CSV file is separated by a semicolon (';') and encoded in 'latin1' encoding\n",
         "ratings = pd.read_csv('/content/drive/MyDrive/Data/BX-Book-Ratings.csv', delimiter=\";\", encoding=\"latin1\")\n",
+        "\n",
+        "# Rename the columns of the DataFrame to more descriptive names\n",
+        "# The columns are renamed to 'userId', 'ISBN', and 'bookRating'\n",
         "ratings.columns = ['userId', 'ISBN', 'bookRating']\n",
+        "\n",
+        "# Display the resulting DataFrame, showing user IDs, book ISBNs, and book ratings\n",
         "ratings"
       ]
     },
@@ -775,8 +797,17 @@
         }
       ],
       "source": [
+        "# Read data from a CSV file containing user information using pandas\n",
+        "# The file is located at '/content/drive/MyDrive/Data/BX-Users.csv'\n",
+        "\n",
+        "# The data in the CSV file is separated by a semicolon (';') and encoded in 'latin1' encoding\n",
         "users = pd.read_csv('/content/drive/MyDrive/Data/BX-Users.csv', delimiter=\";\", encoding=\"latin1\")\n",
+        "\n",
+        "# Rename the columns of the DataFrame to more descriptive names\n",
+        "# The columns are renamed to 'userId', 'location', and 'age'\n",
         "users.columns = ['userId', 'location', 'age']\n",
+        "\n",
+        "# Display the resulting DataFrame, showing user IDs, user locations, and user ages\n",
         "users"
       ]
     },
@@ -1256,8 +1287,18 @@
         }
       ],
       "source": [
+        "# Read data from a CSV file containing book information using pandas\n",
+        "# The file is located at '/content/drive/MyDrive/Data/BX-Books.csv'\n",
+        "\n",
+        "# The data in the CSV file is separated by a semicolon (';') and encoded in 'latin-1' encoding\n",
+        "# \"on_bad_lines\" is set to \"skip\" to ignore lines with errors, and \"low_memory\" is set to False for better memory handling\n",
         "books = pd.read_csv('/content/drive/MyDrive/Data/BX-Books.csv', delimiter=\";\", encoding=\"latin-1\", on_bad_lines=\"skip\", low_memory=False)\n",
+        "\n",
+        "# Rename the columns of the DataFrame to more descriptive names\n",
+        "# The columns are renamed to 'ISBN', 'bookTitle', 'bookAuthor', 'yearOfPublication', 'publisher', 'imageURLS', 'imageURLM', and 'imageURLL'\n",
         "books.columns = ['ISBN', 'bookTitle', 'bookAuthor', 'yearOfPublication', 'publisher', 'imageURLS', 'imageURLM', 'imageURLL']\n",
+        "\n",
+        "# Display the resulting DataFrame, showing book ISBNs, titles, authors, publication years, publishers, and image URLs\n",
         "books"
       ]
     },
@@ -5493,7 +5534,7 @@
       "toc_visible": true,
       "gpuType": "T4",
       "mount_file_id": "1Vdp7v84p70uNjCMJZrhiidD_1gE37xjx",
-      "authorship_tag": "ABX9TyPoj+QYW0elka9UJmhZ7pGv",
+      "authorship_tag": "ABX9TyPGJDQG+R/tuXl0L5HX7uD+",
       "include_colab_link": true
     },
     "kernelspec": {
