Update Import comment

--- a/Book_Recommendation_System.ipynb
+++ b/Book_Recommendation_System.ipynb
@@ -1291,14 +1291,19 @@
         "# The file is located at '/content/drive/MyDrive/Data/BX-Books.csv'\n",
         "\n",
         "# The data in the CSV file is separated by a semicolon (';') and encoded in 'latin-1' encoding\n",
-        "# \"on_bad_lines\" is set to \"skip\" to ignore lines with errors, and \"low_memory\" is set to False for better memory handling\n",
-        "books = pd.read_csv('/content/drive/MyDrive/Data/BX-Books.csv', delimiter=\";\", encoding=\"latin-1\", on_bad_lines=\"skip\", low_memory=False)\n",
+        "# \"on_bad_lines\" is set to \"skip\" to ignore lines with errors, and \"low_memory\" is set to False\n",
+        "# for better memory handling\n",
+        "books = pd.read_csv('/content/drive/MyDrive/Data/BX-Books.csv', delimiter=\";\", encoding=\"latin-1\",\n",
+        "                    on_bad_lines=\"skip\", low_memory=False)\n",
         "\n",
         "# Rename the columns of the DataFrame to more descriptive names\n",
-        "# The columns are renamed to 'ISBN', 'bookTitle', 'bookAuthor', 'yearOfPublication', 'publisher', 'imageURLS', 'imageURLM', and 'imageURLL'\n",
-        "books.columns = ['ISBN', 'bookTitle', 'bookAuthor', 'yearOfPublication', 'publisher', 'imageURLS', 'imageURLM', 'imageURLL']\n",
+        "# The columns are renamed to 'ISBN', 'bookTitle', 'bookAuthor', 'yearOfPublication', 'publisher',\n",
+        "# 'imageURLS', 'imageURLM', and 'imageURLL'\n",
+        "books.columns = ['ISBN', 'bookTitle', 'bookAuthor', 'yearOfPublication', 'publisher',\n",
+        "                 'imageURLS', 'imageURLM', 'imageURLL']\n",
         "\n",
-        "# Display the resulting DataFrame, showing book ISBNs, titles, authors, publication years, publishers, and image URLs\n",
+        "# Display the resulting DataFrame, showing book ISBNs, titles, authors, publication years, publishers,\n",
+        "# and image URLs\n",
         "books"
       ]
     },
@@ -5534,7 +5539,7 @@
       "toc_visible": true,
       "gpuType": "T4",
       "mount_file_id": "1Vdp7v84p70uNjCMJZrhiidD_1gE37xjx",
-      "authorship_tag": "ABX9TyPGJDQG+R/tuXl0L5HX7uD+",
+      "authorship_tag": "ABX9TyMgvO7lHNyr/J+H+VcZIUIi",
       "include_colab_link": true
     },
     "kernelspec": {
